
2009-10-10	Franz Holzinger <franz@ttproducts.de>
	* bugfixing

2009-10-09	Franz Holzinger <franz@ttproducts.de>
	* Change to proxy to support the whole interface without possibility to access the real provider object
	* proxy uses the interface for the provider and is not inherited from the provider class
	* add empty interface to support basket methods
	* add many methods to the provider class to keep the the gateway specific extensions small
	* add payment method images by DIBS
	* add error and cookie methods

VERSION SVN (~0.3.0)

VERSION 0.3.0
	* Added to interface functions for providing a general way of setting URIs
	for redirecting users after a successful/failed transaction:
		abstract public function transaction_setOkPage ($uri)
		abstract public function transaction_setErrorPage ($uri)
	* Fixed missing functions in unit tests
	* Explain unit test framework verification

VERSION 0.2.1

	* Added database field 'paymethod_method' which should hold the selected
	payment method - eg. 'paymethod_method' => 'paymentlib_offline_giro', so a
	specific method can be identified in the table tx_paymentlib_transactions.
	* Fixed typos in transaction constants
	* Fixed typos in README
	* The module "mod1" is removed. A seperate extension "paymentlib_admin" will
	handle backend operations on the tx_paymentlib_transactions table

VERSION 0.2.0

	* Add to new abstract functions, which can be used for adding extra
	functionality to the payment form (see paymentlib_offline for example):
		abstract public function transaction_formGetFormParms ()
		abstract public function transaction_formGetSubmitParms ()

	* Added constants for transactions states in
	class.tx_paymentlib_provider.php

	* Added a tceform itemProcFunc function for displaying payment details in
	records.
		Function: itemsProcFunc_paymentDetails ($PA, $fobj)

    * Made reference a required field. If not applicable on your payment method,
    create an unique value eg. from (micro)time stamp.