@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'This code library acts as an abstraction layer for payment methods in general. Have a look at this extension if you need any payment functionality in your TYPO3 project.',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '0.3.2',
+	'version' => '0.4.0',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
@@ -27,9 +27,9 @@ $EM_CONF[$_EXTKEY] = array(
 	'modify_tables' => '',
 	'clearcacheonload' => 0,
 	'lockType' => '',
-	'author' => 'Udo Gerhards',
+	'author' => 'Udo Gerhards, Franz Holzinger',
 	'author_email' => 'Udo.Gerhards@gerhards.eu',
-	'author_company' => 'pil.dk',
+	'author_company' => '',
 	'CGLcompliance' => '',
 	'CGLcompliance_note' => '',
 	'constraints' => array(
