@@ -38,10 +38,13 @@ define('TX_PAYMENTLIB_TRANSACTION_RESULT_DECLINED', 301);
 define('TX_PAYMENTLIB_TRANSACTION_RESULT_FRAUD', 302);
 define('TX_PAYMENTLIB_TRANSACTION_RESULT_DUPLICATE', 303);
 define('TX_PAYMENTLIB_TRANSACTION_RESULT_OTHER', 310);
+define('TX_PAYMENTLIB_TRANSACTION_RESULT_SCRIPT_OK', 311);
+define('TX_PAYMENTLIB_TRANSACTION_RESULT_INTERNAL_ERROR', 320);
 
 define('TX_PAYMENTLIB_GATEWAYMODE_FORM', 400);
 define('TX_PAYMENTLIB_GATEWAYMODE_WEBSERVICE', 401);
 
+define('TX_PAYMENTLIB_TRANSACTION_STATE_NO_PROCESS', 000);
 define('TX_PAYMENTLIB_TRANSACTION_STATE_AUTHORIZED', 500);
 define('TX_PAYMENTLIB_TRANSACTION_STATE_AUTHORIZE_FAILED', 501);
 define('TX_PAYMENTLIB_TRANSACTION_STATE_CAPTURED', 502);
@@ -52,6 +55,9 @@ define('TX_PAYMENTLIB_TRANSACTION_STATE_CREDITED', 506);
 define('TX_PAYMENTLIB_TRANSACTION_STATE_CREDIT_FAILED', 507);
 define('TX_PAYMENTLIB_TRANSACTION_STATE_RENEWED', 508);
 define('TX_PAYMENTLIB_TRANSACTION_STATE_RENEWAL_FAILED', 509);
+
+define('TX_PAYMENTLIB_TRANSACTION_MESSAGE_NOT_PROCESSED', 000);
+
 
 
 /**
@@ -258,7 +264,7 @@ interface tx_paymentlib_provider_int {
 
 	public function usesBasket ();
 
-	public function createReferenceUid ($orderuid, $callingExtension);
+	public function generateReferenceUid ($orderuid, $callingExtension);
 
 	/**
 	 * Sets the uid of the transaction table
