@@ -1,3 +1,5 @@
+2009-11-07	Franz Holzinger <franz@ttproducts.de>
+	* This comes into the fork paymentlib2
 
 2009-10-10	Franz Holzinger <franz@ttproducts.de>
 	* bugfixing
